--- a/README.adoc
+++ b/README.adoc
@@ -243,12 +243,12 @@ include::finish/src/main/java/io/openliberty/guides/inventory/filter/InventoryOA
 The `filterAPIResponse()` method allows filtering of a particular `APIResponse` element. When you
 override this method, it will be called once for every `APIResponse` element in the OpenAPI tree.
 In this case, you are matching the `404` response that is returned by the `/inventory/systems/{hostname}`
-endpoint and filling in the previously missing description. To remove an `APIResponse` element
+endpoint and completing the previously missing description. To remove an `APIResponse` element
 or another filterable element, simply return `null`.
 
 The `filterOpenAPI()` method allows filtering of the singleton `OpenAPI` element. Unlike other filter
-methods, when you override `filterOpenAPI()`, it will be called only once as the last method
-for a given filter. Hence, make sure that it doesn't override any other filter operations that are
+methods, when you override `filterOpenAPI()`, it is called only once as the last method
+for a particular filter. Hence, make sure that it doesn't override any other filter operations that are
 called before it. Your current OpenAPI document doesn't provide much information on the application
 itself or on what server and port it runs on. This information is usually provided in the `info`
 and `servers` elements, which are currently missing. Use the `OASFactory` class to manually set these
@@ -302,8 +302,8 @@ servers:
 For more information about which elements you can filter, see the `OASFilter`
 https://github.com/eclipse/microprofile-open-api/blob/master/api/src/main/java/org/eclipse/microprofile/openapi/OASFilter.java[implementation].
 
-To learn more about MicroProfile Config, visit the official MicroProfile GitHub https://github.com/eclipse/microprofile-config[repository]
-and try one of our MicroProfile Config guides.
+To learn more about MicroProfile Config, visit the MicroProfile GitHub https://github.com/eclipse/microprofile-config[repository]
+and try one of the MicroProfile Config guides.
 
 
 // =================================================================================================
