--- a/README.adoc
+++ b/README.adoc
@@ -107,7 +107,8 @@ Because the JAX-RS framework handles basic API generation for JAX-RS annotations
 tree will be generated from the `inventory` service. You can use this tree as a starting point and
 augment it with annotations and code to produce a complete OpenAPI document.
 
-Now, point to the {openapi-url} URL to see the generated OpenAPI tree.
+Now, point to the {openapi-url} URL to see the generated OpenAPI tree. As before, you can also point to 
+the {openapi-url}/ui URL for a more interactive view of the APIs.
 
 
 === Augmenting the existing JAX-RS annotations with OpenAPI annotations
