--- a/README.adoc
+++ b/README.adoc
@@ -298,11 +298,7 @@ servers:
     text/plain: {}
 ----
 
-// Later this should be changed to:
-// For more information about which elements you can filter, see the MicroProfile 1.3 API.
-// https://openliberty.io/docs/ref/microprofile/1.3/
-For more information about which elements you can filter, see the `OASFilter`
-https://github.com/eclipse/microprofile-open-api/blob/master/api/src/main/java/org/eclipse/microprofile/openapi/OASFilter.java[implementation].
+For more information about which elements you can filter, see the https://openliberty.io/docs/ref/microprofile/1.3/[MicroProfile 1.3 API].
 
 To learn more about MicroProfile Config, visit the MicroProfile GitHub https://github.com/eclipse/microprofile-config[repository]
 and try one of the MicroProfile Config https://openliberty.io/guides/?search=Config[guides].
